login, registration, logout, routing, deploy settings

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "root": true,
   "ignorePatterns": ["**/*"],
+  "extends": ["eslint:recommended"],
   "plugins": ["@nrwl/nx"],
   "overrides": [
     {
@@ -24,7 +25,166 @@
     {
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:@nrwl/nx/typescript"],
-      "rules": {}
+      "rules": {
+        "no-unused-vars": "off",
+        "react/prop-types": "off",
+        "import/prefer-default-export": "off",
+        "no-shadow": "off",
+        "@typescript-eslint/no-shadow": ["error"],
+        "no-explicit-any": "off",
+        "@typescript-eslint/no-unused-vars": ["warn"],
+        "semi": ["error", "always"],
+        "quotes": [
+          "error",
+          "double",
+          {
+            "avoidEscape": true,
+            "allowTemplateLiterals": true
+          }
+        ],
+        "@typescript-eslint/semi": ["warn"],
+        "no-mixed-spaces-and-tabs": [2, "smart-tabs"],
+        "function-paren-newline": [
+          "error",
+          {
+            "minItems": 2
+          }
+        ],
+        "no-unsafe-optional-chaining": "error",
+        "@typescript-eslint/indent": [
+          "error",
+          "tab",
+          {
+            "ignoredNodes": [
+              "JSXElement *",
+              "JSXElement",
+              "JSXSpreadAttribute",
+              "JSXAttribute"
+            ],
+            "SwitchCase": 1
+          }
+        ],
+        "indent": [
+          "error",
+          "tab",
+          {
+            "VariableDeclarator": {
+              "var": 2,
+              "let": 2,
+              "const": 3
+            },
+            "MemberExpression": 1,
+            "FunctionExpression": {
+              "parameters": "first"
+            },
+            "FunctionDeclaration": {
+              "body": 2,
+              "parameters": "first"
+            },
+            "ArrayExpression": 1,
+            "ObjectExpression": 1,
+            "ImportDeclaration": 1,
+            "ignoreComments": true,
+            "ignoredNodes": [
+              "JSXElement *",
+              "JSXElement",
+              "JSXSpreadAttribute",
+              "JSXAttribute"
+            ],
+            "SwitchCase": 1
+          }
+        ],
+        "function-call-argument-newline": ["error", "always"],
+        "object-curly-newline": [
+          "error",
+          {
+            "ImportDeclaration": {
+              "multiline": true,
+              "minProperties": 3
+            },
+            "ExportDeclaration": "never"
+          }
+        ],
+        "sort-imports": [
+          "error",
+          {
+            "ignoreCase": false,
+            "ignoreDeclarationSort": true,
+            "ignoreMemberSort": true,
+            "memberSyntaxSortOrder": [
+              "none",
+              "all",
+              "multiple",
+              "single"
+            ],
+            "allowSeparatedGroups": false
+          }
+        ],
+        "no-use-before-define": "off",
+        "@typescript-eslint/no-use-before-define": "off",
+        "no-multiple-empty-lines": [
+          "error",
+          {
+            "max": 1,
+            "maxEOF": 0
+          }
+        ]
+      }
+    },
+    {
+      "files": ["*.tsx"],
+      "extends": ["plugin:@nrwl/nx/typescript"],
+      "rules": {
+        "react-hooks/exhaustive-deps": "off",
+        "react/jsx-key": [
+          2,
+          {
+            "checkFragmentShorthand": true
+          }
+        ],
+        "react/jsx-one-expression-per-line": [
+          2,
+          {
+            "allow": "single-child"
+          }
+        ],
+        "react/jsx-max-props-per-line": [
+          1,
+          {
+            "maximum": 1,
+            "when": "always"
+          }
+        ],
+        "react/jsx-first-prop-new-line": ["error", "multiline"],
+        "react/jsx-closing-bracket-location": [1, "line-aligned"],
+        "react/jsx-closing-tag-location": [1, "line-aligned"],
+        "react/jsx-indent-props": [2, "tab"],
+        "react/jsx-no-useless-fragment": "off",
+        "react/style-prop-object": [
+          2,
+          {
+            "allow": ["FormattedNumber"]
+          }
+        ],
+        "no-multiple-empty-lines": [
+          "error",
+          {
+            "max": 1,
+            "maxEOF": 0
+          }
+        ],
+        "quotes": [
+          "error",
+          "double",
+          {
+            "avoidEscape": true,
+            "allowTemplateLiterals": true
+          }
+        ],
+        "semi": ["error", "always"],
+        "@typescript-eslint/no-unused-vars": ["warn"],
+        "no-unused-vars": "off"
+      }
     },
     {
       "files": ["*.js", "*.jsx"],
