--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@
 /tmp
 /out-tsc
 
+.env
+.firebase
+
+*.log
+*/*.log
 # dependencies
 node_modules
 
@@ -16,6 +21,7 @@ node_modules
 *.launch
 .settings/
 *.sublime-workspace
+.editorconfig
 
 # IDE - VSCode
 .vscode/*
