--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,11 @@
 {
-  "singleQuote": true
+  "singleQuote": false,
+  "useTabs": true,
+  "semi": true,
+  "trailingComma": "none",
+  "tabWidth": 4,
+  "bracketSpacing": true,
+  "jsxSingleQuote": false,
+  "singleAttributePerLine": true,
+  "bracketSameLine": false
 }
