--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test"
+    "build": "nx build budget-tracker --skip-nx-cache --prod",
+    "test": "nx test",
+    "deploy": "firebase deploy"
   },
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.10.1",
+    "@reduxjs/toolkit": "^1.8.5",
     "core-js": "^3.6.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -16,6 +21,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@mui/icons-material": "^5.8.4",
     "@nrwl/cli": "14.5.8",
     "@nrwl/cypress": "14.5.8",
     "@nrwl/eslint-plugin-nx": "14.5.8",
@@ -41,9 +47,13 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
+    "firebase": "^9.9.3",
     "jest": "27.5.1",
     "nx": "14.5.8",
     "prettier": "^2.6.2",
+    "process": "^0.11.10",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-test-renderer": "18.2.0",
     "ts-jest": "27.1.4",
     "ts-node": "10.9.1",
